# vizij-rs

./: .git.bak  .gitattributes  .gitignore  AGENTS.md  API_Review.md  Cargo.toml  NEXT_STEPS.md  README.md  ROADMAP.md  arora_blackboard_plan.md  build-record-node-spec.md  fixtures_for_tests.md  fixtures_for_tests2.md  ik_implementation_plan.md  implementation_plan.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ralph.sh  typedoc.json  typedoc.tsconfig.json
animation-player/: .gitignore  Cargo.toml  LICENSE_MIT  Player.md  README.md  WasmAnimationEngine.md  test_animation.json
animation-player/src/: animation_data.rs  animation_player.rs  baking.rs  compare.json  config.rs  error.rs  event.rs  lib.rs  time.rs  value.rs  wasm.rs
animation-player/src/animation/: baking.rs  data.rs  group.rs  ids.rs  instance.rs  keypoint.rs  metadata.rs  mod.rs  track.rs  transition.rs
animation-player/src/interpolation/: cache.rs  context.rs  functions.rs  metrics.rs  mod.rs  parameters.rs  registry.rs  schema.rs  types.rs
animation-player/src/loaders/: mod.rs  studio_animation.rs
animation-player/src/player/: animation_engine.rs  animation_player.rs  mod.rs  playback_metrics.rs  playback_options.rs  playback_state.rs  player_properties.rs  player_settings.rs  player_state.rs
animation-player/src/value/: color.rs  euler.rs  mod.rs  transform.rs  value_enum.rs  vector2.rs  vector3.rs  vector4.rs
animation-player/src/wasm/: animation.rs  conversions.rs  engine.rs  mod.rs  player.rs  utils.rs
animation-player/tests/: animation_tests.rs  baking_tests.rs  derivative_tests.rs  engine_tests.rs  interpolation_tests.rs  keypoint_lookup_tests.rs  new_functions_test.rs  ping_pong_derivative_test.rs  player_tests.rs  spec_compat_animation.json  spec_compat_tests.rs  spline_interp_tests.rs  studio_animation_loader_tests.rs  value_tests.rs  wasm_integration_test.rs  web.rs  web_tests.rs
crates/animation/bevy_vizij_animation/: Cargo.toml  README.md  agents.md
crates/animation/bevy_vizij_animation/src/: components.rs  lib.rs  resources.rs  systems.rs
crates/animation/bevy_vizij_animation/tests/: integration_parity.rs  plugin_smoke.rs  stored_animation_integration.rs
crates/animation/vizij-animation-core/: CHANGELOG.md  Cargo.toml  README.md  agents.md
crates/animation/vizij-animation-core/benches/: animation_step.rs
crates/animation/vizij-animation-core/src/: accumulate.rs  baking.rs  binding.rs  config.rs  data.rs  derivative.rs  engine.rs  ids.rs  inputs.rs  lib.rs  outputs.rs  sampling.rs  scratch.rs  stored_animation.rs  value.rs
crates/animation/vizij-animation-core/tests/: bool_text_step.rs  core_tests.rs  euler_color_bezier.rs  multi_players.rs  parity_outputs.rs  stored_animation_loader.rs  studio_v2_contract.rs  time_math.rs  writebatch_json.rs
crates/animation/vizij-animation-wasm/: CHANGELOG.md  Cargo.toml  README.md  agents.md
crates/animation/vizij-animation-wasm/src/: lib.rs
crates/animation/vizij-animation-wasm/tests/: wasm_api_tests.rs  wasm_bool_text.rs  wasm_parity_tests.rs  wasm_stored_animation.rs
crates/blackboard/vizij-blackboard-core/: Cargo.toml  README.md
crates/blackboard/vizij-blackboard-core/src/: adt.rs  arc_arora_blackboard.rs  arora_blackboard.rs  arora_mem_space.rs  blackboard_ref.rs  constants.rs  lib.rs  simple_blackboard.rs
crates/blackboard/vizij-blackboard-core/test-data/: minimalprogram1.aprog.json  test_bad_schema.aprog.json  test_broken.aprog.json  testprogram1.aprog.json  tinyprogram1.aprog.json
crates/blackboard/vizij-blackboard-core/tests/: adt_tests.rs  ams_tests.rs  arora_blackboard_tests.rs  simple_blackboard_tests.rs
crates/blackboard/vizij-blackboard-wasm/: BLACKBOARD_FRONTEND_GUIDE.md  Cargo.toml  README.md
crates/blackboard/vizij-blackboard-wasm/src/: lib.rs
crates/interop/vizij-animation-module/: .gitignore  Cargo.toml  build.rs  module.yaml  readme.md
crates/interop/vizij-animation-module/src/: lib.rs
crates/interop/vizij-animation-module/tests/: host_ramp.rs
crates/interop/vizij-arora/: Cargo.toml
crates/interop/vizij-arora-behavior/: Cargo.toml  README.md
crates/interop/vizij-arora-behavior/docs/: node-graph.md
crates/interop/vizij-arora-hal/: Cargo.toml
crates/interop/vizij-arora-store/: Cargo.toml
crates/interop/vizij-arora-web/: Cargo.toml
crates/node-graph/bevy_vizij_graph/: Cargo.toml  README.md  agents.md
crates/node-graph/vizij-graph-core/: CHANGELOG.md  Cargo.toml  README.md  agents.md
crates/node-graph/vizij-graph-wasm/: CHANGELOG.md  Cargo.toml  README.md  agents.md
crates/orchestrator/vizij-orchestrator/: Cargo.toml  README.md
crates/orchestrator/vizij-orchestrator-core/: Cargo.toml  README.md  agents.md  merge_tutorial.md  tutorial.md
crates/orchestrator/vizij-orchestrator-wasm/: CHANGELOG.md  Cargo.toml  README.md  agents.md
crates/tools/vizij-glb-migrate/: Cargo.toml  README.md
crates/vizij/: Cargo.toml
crates/vizij/src/: main.rs
devices/vizij-device/: Cargo.toml  rust-toolchain.toml
devices/vizij-device/.cargo/: config.toml
devices/vizij-device/src/: main.rs
ecs-animation-player/: Cargo.toml  DeveloperFeedback.md  ECS.md  ECS_logic.md  IMPLEMENTATION_PLAN.md
ecs-animation-player/src/: config.rs  error.rs  event.rs  lib.rs  time.rs
ecs-animation-player/src/animation/: baking.rs  data.rs  group.rs  ids.rs  instance.rs  keypoint.rs  metadata.rs  mod.rs  track.rs  transition.rs
ecs-animation-player/src/ecs/: components.rs  mod.rs  path.rs  plugin.rs  resources.rs  systems.rs
ecs-animation-player/src/interpolation/: mod.rs  parameters.rs  registry.rs  spline_helpers.rs  types.rs
ecs-animation-player/src/loaders/: studio_animation.rs
ecs-animation-player/src/player/: mod.rs  playback_state.rs
ecs-animation-player/src/value/: color.rs  euler.rs  mod.rs  transform.rs  utils.rs  value_enum.rs  vector2.rs  vector3.rs  vector4.rs
ecs-animation-player/src/wasm/: animation.rs  engine.rs  mod.rs  player.rs
ecs-animation-player/tests/: baked_output.rs  integration_test.rs  output_fallback_test.rs  time_update_test.rs
(+442 files in other folders)
