[workspace]
members = [
  "crates/animation/vizij-animation-core",
  "crates/animation/vizij-animation-wasm",
  "crates/node-graph/vizij-graph-core",
  "crates/node-graph/vizij-graph-wasm",
  "crates/node-graph/vizij-graph-registry-export",
  "crates/api/vizij-api-core",
  "crates/api/vizij-api-wasm",
  "crates/test-fixtures/vizij-test-fixtures",
  "crates/interop/vizij-arora",
  "crates/interop/vizij-animation-module",
  "crates/interop/vizij-arora-web",
  "crates/interop/vizij-arora-store",
  "crates/interop/vizij-arora-hal",
  "crates/interop/vizij-arora-behavior",
  "crates/tools/vizij-glb-migrate",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hashbrown = { version = "0.17", features = ["serde"] }
wasm-bindgen = "0.2.101"
js-sys = "0.3"
anyhow = "1"
serde-wasm-bindgen = "0.6"

# TEMPORARY (VIZ-79 PR2): test against arora-behavior 7 / arora-types 2.1
# (ARORA-72's `LinkSource::Select` + `Key::select`) before those are published.
# Remove once semio-ai/arora-sdk#176 merges and publishes; then bump the pins to
# the released versions.
[patch.crates-io]
arora-behavior = { git = "https://github.com/semio-ai/arora-sdk", branch = "feat/arora-72-edge-selectors" }
arora-types = { git = "https://github.com/semio-ai/arora-sdk", branch = "feat/arora-72-edge-selectors" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

