[package]
name = "animation-player"
version = "0.1.0"
edition = "2021"
authors = ["Semio Team"]
description = "Core animation engine for real-time streaming and interpolation"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "web-sys", "serde-wasm-bindgen", "js-sys", "wee_alloc"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Caching and collections
lru = "0.12"

# Math operations
nalgebra = "0.32"

# Time handling
instant = "0.1"

# Error handling
thiserror = "1.0"

# Size optimization for WASM
wee_alloc = { version = "0.4.5", optional = true }

# WebAssembly-specific dependencies
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"

# WASM testing dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"  # optimize for size
lto = true
codegen-units = 1
panic = "abort"  # smaller code size

[profile.release.package."*"]
opt-level = "s"
