[package]
name = "animation-player"
version = "0.1.0"
edition = "2021"
authors = ["Semio Team"]
description = "Core animation engine for real-time streaming and interpolation"
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Caching and collections
lru = "0.12"

# Math operations
nalgebra = "0.32"

# Error handling
thiserror = "1.0"

# WebAssembly-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

# Size optimization for WASM
wee_alloc = "0.4.5"

[dev-dependencies]
approx = "0.5"

# WASM testing dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"   # optimize for size
lto = true
codegen-units = 1
panic = "abort"   # smaller code size

[profile.release.package."*"]
opt-level = "s"
