[package]
name = "ecs-animation-player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.16" }
bevy_reflect = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
thiserror = "2.0.12"
nalgebra = "0.33.2"
lru = "0.14.0"
bincode = "2.0.1"
tracing = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tracing-subscriber = "0.3"
