[package]
name = "vizij-device"
version = "0.0.0"
edition = "2021"
publish = false
description = "A Vizij rig as a Semio Studio device: RigHal + the arora headless runner (Zenoh registration)."

# Standalone on purpose: the vizij-rs workspace pins its own toolchain and
# member set; this binary is a leaf that composes published arora crates with
# the in-repo RigHal.
[workspace]

[dependencies]
anyhow = "1"
arora = { version = "0.1", features = ["studio-bridge"] }
arora-hal = "0.1"
vizij-arora-hal = { path = "../../crates/interop/vizij-arora-hal" }
