[package]
name        = "bevy_vizij_animation"
version = "0.2.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Bevy plugin that wraps the Vizij animation core."
repository  = "https://github.com/vizij-ai/vizij-rs"
homepage    = "https://github.com/vizij-ai/vizij-rs"
documentation = "https://docs.rs/bevy_vizij_animation"
readme      = "README.md"
keywords    = ["vizij", "animation", "bevy", "plugin"]
categories  = ["game-engines", "rendering", "wasm"]

[dependencies]
vizij-animation-core = { version = "0.2.0", path = "../vizij-animation-core" }
bevy                = { workspace = true }
vizij-api-core      = { path = "../../api/vizij-api-core" }
bevy_vizij_api      = { path = "../../api/bevy_vizij_api" }

[dev-dependencies]
serde_json = "1"
