[package]
name        = "vizij-animation-core"
version = "0.3.0"          # bump when releasing a new version
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Core animation logic for Vizij (engine‑agnostic)."
repository  = "https://github.com/vizij-ai/vizij-rs"
homepage    = "https://github.com/vizij-ai/vizij-rs"
documentation = "https://docs.rs/vizij-animation-core"
readme      = "README.md"
keywords    = ["vizij", "animation", "ecs", "graphics"]
categories  = ["game-engines", "rendering", "wasm"]
# Exclude files that should not be published (e.g. scripts, CI)
exclude = ["*/scripts/*", ".github/*", "npm/*", "target/*"]

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
vizij-api-core = { path = "../../api/vizij-api-core" }
