[package]
name = "vizij-arora-behavior"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Vizij node graph / orchestrator driven as Arora Behaviors (ProcessingGraph, OrchestratorBehavior)."

[dependencies]
arora-behavior = "2"
arora-types = "1"
vizij-arora = { path = "../vizij-arora" }
vizij-api-core = { path = "../../api/vizij-api-core" }
vizij-graph-core = { path = "../../node-graph/vizij-graph-core" }
vizij-orchestrator-core = { path = "../../orchestrator/vizij-orchestrator-core" }
serde_json = { workspace = true }
uuid = "1"

[dev-dependencies]
arora-simple-data-store = "0.1"
