[package]
name = "vizij-arora-behavior"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Vizij node graph / orchestrator driven as Arora behavior interpreters (ProcessingGraph, OrchestratorBehavior)."

[dependencies]
arora-behavior = "4"
arora-types = "1"
uuid = "1"
vizij-api-core = { path = "../../api/vizij-api-core" }
vizij-graph-core = { path = "../../node-graph/vizij-graph-core" }
vizij-orchestrator-core = { path = "../../orchestrator/vizij-orchestrator-core" }

[dev-dependencies]
arora-simple-data-store = "1"
serde_json = { workspace = true }
