[package]
name = "vizij-arora-behavior"
version = "0.0.0"
edition.workspace = true
publish = false
description = "A Vizij node graph driven as an Arora behavior interpreter (ProcessingGraph)."

[dependencies]
arora-behavior = "6"
arora-types = "2"
serde_json = { workspace = true }
uuid = "1"
vizij-api-core = { path = "../../api/vizij-api-core" }
vizij-graph-core = { path = "../../node-graph/vizij-graph-core" }

[dev-dependencies]
arora-simple-data-store = "2"
