[package]
name = "vizij-arora-hal"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Vizij rig presented as an Arora HAL (arora-hal)."

[dependencies]
arora-hal = "0.1"
arora-types = "1"
async-trait = "0.1"
vizij-arora = { path = "../vizij-arora" }
vizij-api-core = { path = "../../api/vizij-api-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
