[package]
name = "vizij-arora-hal"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Vizij rig presented as an Arora HAL (arora-hal)."

[dependencies]
arora-hal = "2"
arora-types = "1"
async-trait = "0.1"
futures-channel = "0.3"
vizij-api-core = { path = "../../api/vizij-api-core" }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
