[package]
name = "vizij-arora-store"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Vizij's Blackboard exposed as an Arora DataStore (arora-types)."

[dependencies]
vizij-arora = { path = "../vizij-arora" }
vizij-api-core = { path = "../../api/vizij-api-core" }
vizij-orchestrator-core = { path = "../../orchestrator/vizij-orchestrator-core" }
arora-types = "1"
