[package]
name = "vizij-arora-web"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Run a Vizij runtime in the browser as an Arora device: a thin wasm-bindgen cdylib composing an arora::Arora over a BlackboardStore + RigHal + a Vizij graph behavior, wrapped with arora-web's AroraWeb (VIZ-14)."

[lib]
crate-type = ["cdylib", "rlib"]

# The whole crate is `wasm32`-only (arora-web's JS surface is), so every
# dependency is gated to that target. On the host the crate is an empty shim with
# no dependencies, so it still participates in a native `cargo build`/`cargo test`
# without pulling the browser device into a host link.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# The device runtime: AroraBuilder composes the device over the injected
# HAL/store/behavior seams; its LocalCaller dispatches in-process Calls.
# `native` off: the browser's WebAssembly host executes modules, not wasmtime.
arora = { version = "9", default-features = false }
# The shared browser JS surface: AroraWeb (step/run/call + the Value<->JSON
# store accessors) wraps the composed device.
arora-web = "6"
# Call/Header/Value vocabulary crossing the JS boundary as JSON.
arora-types = "2"

# The interop crates that already implement the Arora traits over Vizij.
vizij-arora-store = { path = "../vizij-arora-store" }
vizij-arora-hal = { path = "../vizij-arora-hal" }
vizij-arora-behavior = { path = "../vizij-arora-behavior" }

# Vizij pieces the browser wrapper builds the injected behavior from.
vizij-api-core = { path = "../../api/vizij-api-core" }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"
uuid = "1"
# uuid v4 on wasm needs a browser RNG (selects getrandom's wasm_js backend).
getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = { workspace = true }
