[package]
name = "vizij-arora"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Vizij/Arora value interop: identity passthroughs over the shared Value and the Shape.meta sidecar helpers."

[dependencies]
vizij-api-core = { path = "../../api/vizij-api-core" }
serde_json = { workspace = true }
