[package]
name        = "vizij-graph-core"
version = "0.2.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Core node‑graph engine used by Vizij."
repository  = "https://github.com/vizij-ai/vizij-rs"
homepage    = "https://github.com/vizij-ai/vizij-rs"
documentation = "https://docs.rs/vizij-graph-core"
readme      = "README.md"
keywords    = ["vizij", "node", "graph", "ecs"]
categories  = ["rendering", "game-engines"]

[dependencies]
serde    = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
hashbrown  = { workspace = true }
anyhow     = { workspace = true }
vizij-api-core = { path = "../../api/vizij-api-core" }
k = { version = "0.32", optional = true, default-features = false }
urdf-rs = { version = "0.9", optional = true }

[features]
default = ["urdf_ik"]
urdf_ik = ["k", "urdf-rs"]
