[package]
name = "vizij-graph-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hashbrown = { workspace = true }
vizij-graph-core = { path = "../vizij-graph-core", version = "0.1.0" }

[features]
# Enable this if you want console_error_panic_hook
console_error_panic_hook = []
