[package]
name        = "vizij-graph-wasm"
version = "0.2.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "wasm‑bindgen interface for Vizij node graph."
repository  = "https://github.com/vizij-ai/vizij-rs"
homepage    = "https://github.com/vizij-ai/vizij-rs"
documentation = "https://docs.rs/vizij-graph-wasm"
readme      = "README.md"
keywords    = ["vizij", "node", "graph", "wasm"]
categories  = ["wasm", "rendering"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
hashbrown    = { workspace = true }
vizij-graph-core = { path = "../vizij-graph-core", version = "0.2.0" }
vizij-api-core = { path = "../../api/vizij-api-core" }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["urdf_ik"]
# enable console error hook if desired
console_error = ["console_error_panic_hook"]
urdf_ik = ["vizij-graph-core/urdf_ik"]
